Fixed comment status alignment

--- a/style.less
+++ b/style.less
@@ -296,6 +296,21 @@ textarea.message_text {
 					background-color: transparent;
 				}
 			}
+
+			.evo_status {
+				margin-top: 10px;
+				@media screen and (max-width: 640px ) {
+					float: none !important;
+					display: inline-block;
+					margin-top: 5px;
+				}
+			}
+
+			.panel-title {
+				.login.user ~ .label {
+					margin-right: 5px;
+				}
+			}
 		}
 		.panel-body {
 			padding: 15px 0 0;
